assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Arvo&family=Roboto+Slab&display=swap');

*{
    margin:0;
    padding:0;
    border: none;
}

body{
    font-family: "Robot Slab", sans-serif;
}

/* header and logo */

header{
    background-color: azure;
}
h1, h2{
    font-family: "Arvo", sans-serif;
    color:black;
}


#logo{
    font-size:300%;
    text-decoration: none;
    float:left;
}

/* navigation */


#menu{
    font-size:150%;
}
#menu, #logo{
    line-height: 10px;
    padding: 35px;
}

#menu li{
    list-style-type: none;
    padding-left: 50px;
    float:right;
}

#menu a{
    text-decoration: none;
    color:black;
}

#menu a:hover{
    color:white;
    background-color: black;

}
.active{
    border-bottom: 1px solid black;
}

/* hero image */

#hero-image{
    width:100%;
    height:600px;
    background: url(../images/hero-image.jpg) no-repeat;
    background-position: 62% 30%;
    filter:blur(5px);
    border: 1px transparent;
    overflow:hidden;
}

#cover-text h2{
    color:azure;
    background-color: rgba(0, 0, 0, 0.5);
    font-size: 300%;
    font-weight: bold;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 2;
    width: 50%;
    padding: 80px;
    text-align: center;
}

#adopt{
    color:inherit;
    display:block;
    text-decoration: none;
    text-transform: uppercase;
    position:relative;
    top:40px;
    font-size:smaller;
}

#adopt:hover{
    border-bottom:5px solid azure;

}

/* steps */

#steps-title{
    font-size:300%;
    background-color: azure;
    text-align: center;
    padding:20px;
}

#first-step{
    background-image: url("../images/first-step.jpg") no-repeat;
    width:25%;
    height:200px;
    text-align:center;
    float:left;
    font-size:150%;
  
}

#second-step{
    background-color: black;
    color:azure;
    width:25%;
    height:200px;
    text-align:center;
    float:left;
    font-size:150%;
  
}

#third-step{
    background-color: black;
    color:azure;
    width:25%;
    height:200px;
    text-align:center;
    float:left;
    font-size:150%;
  
}

#fourth-step{
    background-color: black;
    color:azure;
    width:25%;
    height:200px;
    text-align:center;
    float:left;
    font-size:150%;
}

